--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for MojoX-Plugin-PHP
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.01    2013-09-23
+	Initial release
 
