--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for MojoX-Plugin-PHP
 
-0.01    2013-09-23
-	Initial release
-
+0.01	2013-09-26
+	Initial release. A lot of features implemented and tested
+	already because a lot of code and ideas were borrowed from
+	more mature Catalyst-View-Template-PHP distribution.
