--- a/README
+++ b/README
@@ -4,15 +4,47 @@ MojoX-Plugin-PHP 0.01
 A Mojolicious plugin that will allow you to use PHP as a templating
 system for your web application. 
 
-[ TODO : use cases and demonstration of how to use in
-         Mojolicious and Mojolicious::Lite applications ]
+Let's suppose you have some php files  foo.php  and  bar/baz.php
+that do something useful for you. To use them within your Mojolicious
+application, you only need to enable this plugin, place the php
+files under your Mojolicious application's  /templates  or  /public
+directory, and make requests on your server for the paths
+
+    /foo.php
+    /bar/baz.php
+
+Even though the web server is written in Perl, the response for
+these requests will be just as if the request was processed by a PHP
+interpreter. That's because it was.
+
+FEATURES
+
+* Mojolicious stash variables are availble in the PHP program
+  as global variables.
+
+* Possible to preprocess PHP program inputs ($_GET, $_SERVER, 
+  the stash variables, etc.) before the PHP processing begins.
+
+* Possible to postprocess the PHP output and response headers
+  before delivering the response from Mojolicious.
+
+* Powerful mechanism to trigger execution of arbitrary Perl
+  code from PHP and to deliver the result so it can be used
+  by PHP.
+
+* All the [insert backhanded compliment here]-ness of PHP in your
+  Mojolicious application
+
 
 DEPENDENCIES
 
 This distribution depends on Dmitry Karasik's PHP distribution,
 which is a Perl module (available on CPAN) for using a PHP 
-interpreter from Perl.
-
+interpreter from Perl. PHP (i.e., the Perl module called PHP)
+in turn depends on a PHP installation built with the embedded
+SAPI library (say, built from source after running
+./configure --enable-embed ... )
+ 
 INSTALLATION
 
 To install this module, run the following commands:
