pod/README fixes
Comment out encoding and namespace attributes from
MojoX::Template::PHP since I'm not sure how they're
going to be used.

--- a/README
+++ b/README
@@ -32,8 +32,7 @@ FEATURES
   code from PHP and to deliver the result so it can be used
   by PHP.
 
-* All the [insert backhanded compliment here]-ness of PHP in your
-  Mojolicious application
+* All the adequacy of PHP in your Mojolicious application
 
 
 DEPENDENCIES
