--- a/Changes
+++ b/Changes
@@ -8,3 +8,6 @@ Revision history for MojoX-Plugin-PHP
 0.02	2013-11-02
 	Refactored path rewrite rules and simplified routing.
 	Implement use_index_php config parameter
+
+0.03	...
+	the next great change to MojoX-Plugin-PHP
