update Changes file
remote $DB::single ref in examples/wp-on-mojo.pl

--- a/Changes
+++ b/Changes
@@ -9,5 +9,6 @@ Revision history for MojoX-Plugin-PHP
 	Refactored path rewrite rules and simplified routing.
 	Implement use_index_php config parameter
 
-0.03	...
-	the next great change to MojoX-Plugin-PHP
+0.03	2014-05-10
+	Include examples/wp-on-mojo.pl demo script
+	Minor redesign of error output in MojoX::Template::PHP
