--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-MojoX-Plugin-PHP 0.03
+MojoX-Plugin-PHP 0.04
 =====================
 
 A plugin for using PHP as a templating system for your
@@ -78,7 +78,7 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2013 Marty O'Brien
+Copyright (C) 2013-2014 Marty O'Brien
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the the Artistic License (2.0). You may obtain a
